--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <div class="card-body">
         <div class="row">
  			<div class="col-sm-4"><p>   </p><img src="images/maui_dive.jpeg" width="300"></div>
-  			<div class="col-sm-4"><p>   </p><img src="images/honokowai_small.jpg" width="300"></div>
+  			<div class="col-sm-4"><p>   </p><img src="images/honokowai_small.JPG" width="300"></div>
             <div class="col-sm-4"><p>   </p><img src="images/wahi_small.JPG" width="300"></div>
               
             </div>
