--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <div class="col-sm-8">ktisthammer at gmail.com</div>
             </div>
             <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Affiliations</strong></div>
+              <div class="col-sm-4"><strong class="text-uppercase">Affiliations:</strong></div>
               <div class="col-sm-8">University of Hawaii at Manoa, San Francisco State University, University of California, Davis</div>
             </div>
             <div class="row mt-3">
