--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <div class="col-sm-8">Genomics, Proteomics, R, Python, ML</div>
             </div>
             <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
+              <div class="col-sm-4"><strong class="text-uppercase">Languages:</strong></div>
               <div class="col-sm-8">English, Japanese</div>
             </div>
           </div>
