update research page

--- a/research.html
+++ b/research.html
@@ -71,7 +71,7 @@
                 <p class="category"></p>
               </div>
               <div class="col-lg-8 col-md-8">
-                <p>My research interests are focused on understanding how marine organisms respond to environmental stressors and adapt to changing environments. Anthropogenic stressors have changed our coastal marine environments drastically over the last century. I am interested in understanding what makes some individuals, populations, or species more resilient than others to individual, as well as combinations of stressors. I approach these questions using controlled laboratory experiments, field experiments, field surveys together with molecular 'omics' techniques, such as genomics and proteomics. I use an ecotoxicological approach to understand physiological and molecular responses of organisms to specific stressors, and employ genomics and proteomics combined with ecological experiments to answer ecological and evolutionary processes behind local adaptation, acclimatization, and resilience in marine organisms. The ultimate goal of my research is to provide solid science that will lead to the protection and conservation of marine biodiversity. My primary interest is with coral reef ecosystems, and specifically, I have worked extensively with reef-building corals. I have also worked with other marine organisms, including sea urchins, nudibranch, and algae, and will be working on population genomics of pacific herring, starting January 2022. I am interested in working with different marine systems as opportunities present. I am also passionate about computational biology and promoting coding for STEM/biology students.</p>
+                <p>My research interests are focused on understanding how marine organisms respond to environmental stressors and adapt to changing environments. Anthropogenic stressors have changed our coastal marine environments drastically over the last century. I am interested in understanding what makes some individuals, populations, or species more resilient than others to individual or combinations of stressors. I approach these questions using controlled laboratory experiments, field experiments, field surveys together with molecular 'omics' techniques, such as genomics and proteomics. I use an ecotoxicological approach to understand physiological and molecular responses of organisms to specific stressors, and employ genomics and proteomics combined with ecological experiments to answer ecological and evolutionary processes behind local adaptation, acclimatization, and resilience in marine organisms. The ultimate goal of my research is to provide solid scientific data that will lead to the protection and conservation of marine biodiversity. My primary interest is with coral reef ecosystems, and specifically, I have worked extensively with reef-building corals. I have also worked with other marine organisms, including sea urchins, nudibranch, and algae. I am interested in working with different marine systems as opportunities present. I am also passionate about computational biology and promoting coding for STEM/biology students.</p>
               </div>
             </div>
       </div>
@@ -92,7 +92,7 @@
                 <p class="category"></p>
               </div>
               <div class="col-lg-8 col-md-8">
-                <p>   My current project at the Whitehead Lab is on population and evolutionary genomics of pacific herring populations from Alaska. The Prince William Sound (PWS) Pacific herring populations collapsed and has not recovered since early 90's after the Exxon Valdez oil spill (EVOS). The reasons for the lack of recovery remain a mystery. In this project, we are using population and evolutionary genomics tools to understand the causes and consequences of the collapse. We have temporal and spatial data: We have low-coverage whole genome sequencing data for pacific herring populations from PWS and 2 nearby bays spanning 3 decades, and from California to Togiak Bay, Alaska collected in 2017. We hope to provide novel insights into the causes and consequences of recent dramatic demographic changes in PWS fish, inform novel intervention strategies, and provide modern genomic resources for management and conservation of Pacific herring. </p>
+                <p>   My current project at <a href="https://whiteheadresearch.wordpress.com" target="_blank">the Whitehead Lab</a> of UC Davis is about population and evolutionary genomics of pacific herring populations from Alaska. The Prince William Sound (PWS) Pacific herring populations collapsed and has not recovered since early 90's after the Exxon Valdez oil spill (EVOS). The reasons for the lack of recovery remain a mystery. In this project, we are using population and evolutionary genomics tools to understand the causes and consequences of the collapse. We have extensive temporal and spatial data of Pacific herring populations; from PWS and 2 nearby Alaska bays spanning 3 decades (temporal), and along the Pacific Coast, expanding from California to Togiak Bay, Alaska (spatial data). We hope to provide novel insights into the causes and consequences of recent dramatic demographic changes in PWS fish, inform novel intervention strategies, and provide modern genomic resources for management and conservation of Pacific herring. </p>
                 <p>   This project is ongoing in collaboration with laboratory experiments, exposing pacific herring embryos and larvae to oil and an infectious virus that causes high mortality in Pacific herring. Check out  <a href="https://tonygill.weebly.com/" target="_blank">Tony Gill's page</a> for more info. </p>  
               </div>
             </div>
@@ -141,6 +141,25 @@
   </div>
 </div>
 
+<div class="section" id="research_projects">
+  <div class="container">
+    <div class="h4 text-center mb-4 title">Research Project: <i>In vivo</i> Viral evolution </div>
+    <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+      <div class="card-body">
+        <div class="row">
+            <div class="col-lg-4 col-md-5 cc-reference-header"><img src="images/Virus_mini.png" alt="Image"/>
+                <div class="h5 pt-2"></div>
+                <p class="category"></p>
+              </div>
+              <div class="col-lg-8 col-md-8">
+                <p> I have investigated the evolutionary genomics of disease viruses at the computational biology lab (CoDE Lab) of <a href=“https://pleunipennings.wordpress.com/" target="_blank">Dr. Pleuni Pennings</a> at San Francisco State University. My research projects at the CoDE Lab included estimating genome-wide fitness costs of in vivo mutations in Hepatitis C virus using clinical data (human) and understanding evolutionary dynamics of Simian immunodeficiency virus (SIV) in macaques under co-infection with tuberculosis (TB). I used custom scripts I have developed in R and Python along with command-line based programs to investigate viral evolution. I also have applied machine learning to predict mutation frequencies and fitness costs. Under Dr. Pennings, I have acquired not only coding skills and good data science practice, but also the passion for promoting coding in biology students (SFSU offeres students many opportunities to learn coding and I have participated as a mentor to several programs!). 
+
+                 </p>
+            </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 <div class="section" id="research_projects">
