--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
             <p>Hello! I am Kaho H. Tisthammer, PhD, Marine Biologist, Molecular Ecologist, and Computational Biologist.</p>
-            <p>I am a marine biologist/ecologist, and I have worked extensively with coral reef ecosystems. I am also trained as a computational biologist in the field ecological and evolutionary genomics. My passion is marine and coral reef conservation, and the ultimate goal of my research is to help protect marine biodiversity by providing solid scientific data.  <a href="research.html" target="_blank">Learn More</a></p>
+            <p>I am a marine biologist/ecologist, and I have worked extensively with coral reef ecosystems. I am also trained as a computational biologist in the field ecological and evolutionary genomics. My passion is marine and coral reef conservation, and the ultimate goal of my research is to help protect marine biodiversity by providing solid scientific data.  <a href="research.html" target="_blank">Learn More.</a></p>
+            <p> <a href="https://www.linkedin.com/in/kaho-tisthammer/", target=blank>Linkedin Page</a>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
