update research page

--- a/research.html
+++ b/research.html
@@ -147,7 +147,7 @@
     <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
       <div class="card-body">
         <div class="row">
-            <div class="col-lg-4 col-md-5 cc-reference-header"><img src="images/Virus_mini.png" alt="Image"/>
+            <div class="col-lg-4 col-md-5 cc-reference-header"><img src="images/virus_mini.png" alt="Image"/>
                 <div class="h5 pt-2"></div>
                 <p class="category"></p>
               </div>
