--- a/publications.html
+++ b/publications.html
@@ -66,8 +66,11 @@
     <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
       <div class="card-body">
         <div class="row ml-2">
-            <div class="col-lg-12 col-md-8">
-            <div class="row">
+          <div class="col-lg-12 col-md-8">
+        		<div class="row">
+                 <p><u>Tisthammer KH</u>, Solis C, Oracles F, Nzerem M, Winstead R, Dong W, Joy JB, Pennings PS. 2022. Assessing <i>in vivo</i> mutation frequencies and creating a high-resolution genome-wide map of fitness costs of Hepatitis C virus. PLOS Genetics (in press). <a href=" biorxiv.org/cgi/content/short/2020.10.01.323253v1" target="_blank" rel="noopener noreferrer">  bioRxiv version</a> </p>
+                </div>
+	            <div class="row">
                  <p><u>Tisthammer KH</u>, Kline C, Rutledge T, Diedrich CR, Ita S, Lin PL, Ambrose Z, Pennings PS. 2022. SIV Evolutionary Dynamics in Cynomolgus Macaques during SIV-<i>Mycobacterium tuberculosis</i> Co-Infection. Scientific Reports 11:3423 <a href="https://www.mdpi.com/1999-4915/14/1/48" target="_blank" >  https://doi.org/10.3390/v14010048 </a> <a href="files/2022_Tisthammer_Viruses.pdf" download rel="noopener noreferrer" target="_blank">   Download File</a></p>
                </div>
                <div class="row">
@@ -77,13 +80,7 @@
                  <p><u>Tisthammer KH</u>, Dong W, Joy JB, Pennings PS. 2021. Comparative analysis of in vivo mutation patterns and diversity of Hepatitis C Virus subtypes 1a, 1b, and 3a. Viruses 13, 511 <a href="https://doi.org/10.3390/v13030511" target="_blank" rel="noopener noreferrer"> https://doi.org/10.3390/v13030511</a> <a href="files/2021_Tisthammer Viruses.pdf" download rel="noopener noreferrer" target="_blank">   Download File</a></p>
                </div>
                <div class="row">
-                 <p><u>Tisthammer KH</u>, Kline C, Rutledge T, Ita S, Johnson WE, Lin PL, Ambrose Z, Pennings PS. 2021. SIV evolutionary dynamics in cynomolgus macaques during SIV-Mycobacterium tuberculosis co-infection. Viruses. (In press) </p>
-               </div>
-               <div class="row">
                  <p><u>Tisthammer KH</u>, Forsman ZH, Toonen RJ, Richmond RH. 2020. Genetic structure is stronger across human- impacted habitats than among islands in the coral Porites lobata. PeerJ 8:e8550  <a href="http://doi.org/10.7717/peerj.8550" target="_blank" rel="noopener noreferrer"> http://doi.org/10.7717/peerj.8550</a> <a href="files/2020_Tisthammer_PeerJ.pdf" download rel="noopener noreferrer" target="_blank">   Download File</a></p>
-               </div>
-               <div class="row">
-                 <p><u>Tisthammer KH</u>, Dong W, Joy JB, Pennings PS. 2020. Assessing in vivo mutation frequencies and creating a high-resolution genome-wide map of fitness costs of Hepatitis C virus <a href=" biorxiv.org/cgi/content/short/2020.10.01.323253v1" target="_blank" rel="noopener noreferrer">  biorxiv.org/cgi/content/short/2020.10.01.323253v1</a> </p>
                </div>
                <div class="row">
                  <p>Brown NP, Forsman SH, <u>Tisthammer KH</u>, Richmond RH. 2020. A resilient brooding coral in the broadcast spawning Porites lobata species complex: a new endemic, introduced species, mutant, or new adaptive potential? Coral Reefs 39: 809–818 <a href="files/2020_Brown_CoralReefs.pdf" download rel="noopener noreferrer" target="_blank">   Download File</a></p>
