--- a/publications.html
+++ b/publications.html
@@ -68,7 +68,7 @@
         <div class="row ml-2">
           <div class="col-lg-12 col-md-8">
         		<div class="row">
-                 <p><u>Tisthammer KH</u>, Solis C, Oracles F, Nzerem M, Winstead R, Dong W, Joy JB, Pennings PS. 2022. Assessing <i>in vivo</i> mutation frequencies and creating a high-resolution genome-wide map of fitness costs of Hepatitis C virus. PLOS Genetics (in press). <a href=" biorxiv.org/cgi/content/short/2020.10.01.323253v1" target="_blank" rel="noopener noreferrer">  bioRxiv version</a> </p>
+                 <p><u>Tisthammer KH</u>, Solis C, Orcales F, Nzerem M, Winstead R, Dong W, Joy JB, Pennings PS. 2022. Assessing <i>in vivo</i> mutation frequencies and creating a high-resolution genome-wide map of fitness costs of Hepatitis C virus. PLOS Genetics. <a href="https://doi.org/10.1371/journal.pgen.1010179" target="_blank" rel="noopener noreferrer">  https://doi.org/10.1371/journal.pgen.1010179 </a> </p>
                 </div>
 	            <div class="row">
                  <p><u>Tisthammer KH</u>, Kline C, Rutledge T, Diedrich CR, Ita S, Lin PL, Ambrose Z, Pennings PS. 2022. SIV Evolutionary Dynamics in Cynomolgus Macaques during SIV-<i>Mycobacterium tuberculosis</i> Co-Infection. Scientific Reports 11:3423 <a href="https://www.mdpi.com/1999-4915/14/1/48" target="_blank" >  https://doi.org/10.3390/v14010048 </a> <a href="files/2022_Tisthammer_Viruses.pdf" download rel="noopener noreferrer" target="_blank">   Download File</a></p>
