--- a/index.html
+++ b/index.html
@@ -100,6 +100,21 @@
   </div>
 </div>
 
+<div class="section" id="images">
+  <div class="container">
+    <div class="h4 text-center mb-4 title"></div>
+    <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+      <div class="card-body">
+        <div class="row">
+  			<div class="col-sm-4"><p>   </p><img src="images/kewalo_lab_small.jpg" width="300"></div>
+            <div class="col-sm-4"><p>   </p><img src="images/lab_small.jpeg" width="300"></div>
+            <div class="col-sm-4"><p>   </p><img src="images/pdam_small.jpg" width="300"></div>
+           
+              
+            </div>
+      </div>
+    </div>
+  </div>
 
 <div class="section" id="images">
   <div class="container">
