updates to some contents

--- a/experience.html
+++ b/experience.html
@@ -48,7 +48,7 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/maui_reef.jpg')"></div>
        <div class="container">
         <div class="content-center">
-          <div class="h2 title">Kaho Tisthammer PhD</div>
+          <div class="h2 title">Kaho Tisthammer, PhD</div>
            <p class="category text-white">Marine Biologist, Molecular Ecologist, Computational Biologist</p>
         </div>
        </div>
@@ -70,13 +70,13 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Postdoctoral Researcher, University of California Davis, January 2022 -current</div>
+            <div class="h5">Postdoctoral Researcher, University of California Davis, January 2022 - Present</div>
             <p>Working in the Whitehead Lab at the Environmental Ecotoxicology Department of UC Davis, investigating population and evolutionary genomics of Pacific herring populations in Alaska. <a href= "https://cpb.ucdavis.edu/postdoctoral-associates" target="_blank"> Postdoctoral Associate</a> of <a href= "https://cpb.ucdavis.edu" target="_blank"> Center for Population Biology</a>. </p>
             <div class="h5">Postdoctoral Fellow/Adjunct Professor, SFSU, July 2018 - Dec. 2021</div>
             <p>Worked in a computational biology lab led by Dr. Pleuni Pennings, investigating evolutionary and population dynamics of viruses, while teaching courses including Marine Ecology and Coding Community!</p>
 			<div class="h5">Postdoctoral Fellow, University of Hawaii at Manoa, June 2017 - June 2018</div>
             <p>Worked in the Richmond Lab, investigating proteomic responses of corals to environmental stressors.</p>
-			 <div class="h5">Ph.D. Student/Graduate Research Assistant, Univ of Hawaii at Manoa, 2012 -2017</div>
+			 <div class="h5">PhD Student/Graduate Research Assistant, University of Hawaii at Manoa, 2012 -2017</div>
 			<p>Worked in the Richmond Lab, investigating the adaptive ability of corals to environmental stressors and ecotoxicology of corals.</p>
 
           </div>
@@ -93,16 +93,26 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">BIOL586 Marine Ecology Laboratory, instructor, SFSU </div>
+            <div class="h5">BIOL586 Marine Ecology Laboratory, SFSU </div>
             <p> Created a curriculum and taught a semester-long Marine Ecology Laboratory virtual course during COVID-19 shutdown (Fall 2020). I had to be creative to teach a lab course online and we ventured into designing experiments, data analysis and plotting, and presentations/paper-writing.  <a href="files/MarineEcology586.pdf" download rel="noopener noreferrer" target="_blank">  Download the syllabus</a>.  </p>
-             <div class="h5">BIOL585 Marine Ecology, instructor, SFSU </div>
+             <div class="h5">BIOL585 Marine Ecology, SFSU </div>
             <p> Created a curriculum and taught a semester-long Marine Ecology (lecture) virtual course during COVID-19 shutdown (Spring 2021). To motivate students for virtual learning, I offered the course synchronously and used lots of fun quizzes, polls, videos, and guest lectured to spice it up!  <a href="files/MarineEcology586.pdf" download rel="noopener noreferrer" target="_blank">  Download the syllabus</a>.  </p>
            
             <p> </p>
-             <div class="h5">BIOL/CHEM701 Coding Community, instructor, SFSU </div>
+             <div class="h5">BIOL/CHEM701 Coding Community, SFSU </div>
             <p> This class "Coding Community for Data Science Components of Independent Research Projects" is part of the  <a href="https://goldsfsu.weebly.com/" target="_blank">  GOLD</a> (Graduate Opportunities to Learn Data science) Program, which offeres biology and chemistry master students to earn a graduate certificate in Data Science for Biology and Chemistry. A timely, much-needed exciting program that started in 2021 at SFSU. I was thrilled to be part of the program to guide students to learn coding and a data science practice.  <a href="files/BIOL807_Syllabus.pdf" download rel="noopener noreferrer" target="_blank">  Download the syllabus</a>.   </p>
-             <div class="h5">BIOL638 Bioinformatics, co-instructor, SFSU </div>
-            <p> As a co-instructor with Drs. Pleuni Pennings and Scott Roy, I created a curriculum to teach how to process and analyze NGS data for Biology undergraduate and graduate students. We conducted hands-on analysis using HCV MiSeq data. Students always enjoy actual data analysis, and I taught this curriculum 2 years and at several other workshops.</p>
+             <div class="h5">BIOL638 Bioinformatics, SFSU </div>
+            <p> As a co-instructor with Drs. Pleuni Pennings and Scott Roy, I created a curriculum to teach how to process and analyze NGS data for Biology undergraduate and graduate students. We conducted hands-on analysis using HCV MiSeq data. Students always enjoy actual data analysis, and I taught this curriculum for 2 years and at several other workshops.</p>
+
+ 			<p> </p>
+             <div class="h5">Teaching Assistant Experience</div>
+             <p> • BIOL601 Marine Biology, University of Hawaii at Manoa (Graduate-level course) </p>
+             <p> • EEMB595 Advanced Population Ecology, UC Santa Barbara (Graduate-level course) </p>
+             <p> • EEMB108 Vertebrate Evolutionary Morphology , UC Santa Barbara (Upper-level undergaduate course) </p>
+             <p> • BIO352 Ecology Laboratory, Stony Brook University (Upper-level undergaduate course) </p>
+             <p> • BIO202 Fundamentals of Biology Laboratory, Stony Brook University (lower-level undergaduate course) </p>
+
+
           </div>
         </div>
       </div>
