--- a/research.html
+++ b/research.html
@@ -48,7 +48,7 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/corals_hawaii.jpg')"></div>
        <div class="container">
         <div class="content-center">
-          <div class="h2 title">Kaho Tisthammer PhD</div>
+          <div class="h2 title">Kaho Tisthammer, PhD</div>
            <p class="category text-white">Marine Biologist, Molecular Ecologist, Computational Biologist</p>
         </div>
        </div>
@@ -71,7 +71,7 @@
                 <p class="category"></p>
               </div>
               <div class="col-lg-8 col-md-8">
-                <p>My research interests are focused on understanding how marine organisms respond to environmental stressors and adapt to changing environments. Anthropogenic stressors have changed our coastal marine environments drastically over the last century. I am interested in understanding what makes some individuals, populations, or species more resilient than others to individual or combinations of stressors. I approach these questions using controlled laboratory experiments, field experiments, field surveys together with molecular 'omics' techniques, such as genomics and proteomics. I use an ecotoxicological approach to understand physiological and molecular responses of organisms to specific stressors, and employ genomics and proteomics combined with ecological experiments to answer ecological and evolutionary processes behind local adaptation, acclimatization, and resilience in marine organisms. The ultimate goal of my research is to provide solid scientific data that will lead to the protection and conservation of marine biodiversity. My primary interest is with coral reef ecosystems, and specifically, I have worked extensively with reef-building corals. I have also worked with other marine organisms, including sea urchins, nudibranch, and algae. I am interested in working with different marine systems as opportunities present. I am also passionate about computational biology and promoting coding for STEM/biology students.</p>
+                <p>My research interests are focused on understanding how marine organisms respond to environmental stressors and adapt to changing environments. Anthropogenic stressors have changed our coastal marine environments drastically over the last century. I am interested in understanding what makes some individuals, populations, or species more resilient than others to individual or combinations of stressors. I approach these questions using controlled laboratory experiments, field experiments, and field surveys together with molecular 'omics' techniques, such as genomics and proteomics. I use an ecotoxicological approach to understand physiological and molecular responses of organisms to specific stressors, and employ genomics and proteomics combined with ecological experiments to answer ecological and evolutionary processes behind local adaptation, acclimatization, and resilience in marine organisms. The ultimate goal of my research is to provide solid scientific data that will lead to the protection and conservation of marine biodiversity. My primary interest is with coral reef ecosystems, and specifically, I have worked extensively with reef-building corals. I have also worked with other marine organisms, including sea urchins, nudibranch, and algae. I am interested in working with different marine systems as opportunities present. I am also passionate about computational biology and promoting coding for STEM/biology students.</p>
               </div>
             </div>
       </div>
@@ -83,7 +83,7 @@
 
 <div class="section" id="research_projects">
   <div class="container">
-    <div class="h4 text-center mb-4 title">Research Project: Pacific herring population genomics</div>
+    <div class="h4 text-center mb-4 title">Research Project: Pacific Herring Population Genomics</div>
     <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
       <div class="card-body">
         <div class="row">
@@ -92,8 +92,8 @@
                 <p class="category"></p>
               </div>
               <div class="col-lg-8 col-md-8">
-                <p>   My current project at <a href="https://whiteheadresearch.wordpress.com" target="_blank">the Whitehead Lab</a> of UC Davis is about population and evolutionary genomics of pacific herring populations from Alaska. The Prince William Sound (PWS) Pacific herring populations collapsed and has not recovered since early 90's after the Exxon Valdez oil spill (EVOS). The reasons for the lack of recovery remain a mystery. In this project, we are using population and evolutionary genomics tools to understand the causes and consequences of the collapse. We have extensive temporal and spatial data of Pacific herring populations; from PWS and 2 nearby Alaska bays spanning 3 decades (temporal), and along the Pacific Coast, expanding from California to Togiak Bay, Alaska (spatial data). We hope to provide novel insights into the causes and consequences of recent dramatic demographic changes in PWS fish, inform novel intervention strategies, and provide modern genomic resources for management and conservation of Pacific herring. </p>
-                <p>   This project is ongoing in collaboration with laboratory experiments, exposing pacific herring embryos and larvae to oil and an infectious virus that causes high mortality in Pacific herring. Check out  <a href="https://tonygill.weebly.com/" target="_blank">Tony Gill's page</a> for more info. </p>  
+                <p>   My current project at <a href="https://whiteheadresearch.wordpress.com" target="_blank">the Whitehead Lab</a> of UC Davis is about population and evolutionary genomics of Pacific herring populations from Alaska. The Prince William Sound (PWS) Pacific herring population collapsed and has not recovered since the early 1990's following the Exxon Valdez oil spill. The reasons for the lack of recovery remain a mystery. In this project, we are using population and evolutionary genomics tools to understand the causes and consequences of the collapse. We have extensive temporal and spatial data of Pacific herring populations from PWS and 2 nearby Alaska bays spanning 3 decades (temporal), and along the Pacific Coast, expanding from California to Togiak Bay, Alaska (spatial data). We hope to provide novel insights into the causes and consequences of recent dramatic demographic changes in PWS fish, inform novel intervention strategies, and provide modern genomic resources for management and conservation of Pacific herring. </p>
+                <p>   This project is an ongoing collaboration with laboratory experiments that expose Pacific herring embryos and larvae to oil, as well as an infectious virus that causes high mortality in Pacific herring. More information can be found at <a href="https://tonygill.weebly.com/" target="_blank">Tony Gill's website</a>. </p>  
               </div>
             </div>
       </div>
@@ -104,7 +104,7 @@
 
 <div class="section" id="research_projects">
   <div class="container">
-    <div class="h4 text-center mb-4 title">Research Project: Coral adaptation to local environment</div>
+    <div class="h4 text-center mb-4 title">Research Project: Coral Adaptation to Local Environment</div>
     <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
       <div class="card-body">
         <div class="row">
@@ -113,8 +113,8 @@
                 <p class="category"></p>
               </div>
               <div class="col-lg-8 col-md-8">
-                <p> For my PhD dissertation and postdoctoral research at the Richmond Lab at the Kewalo Marine Laboratory of the University of Hawaii at Manoa, I investigated the adaptive ability of corals to changing environments, using genetics, genomics, and proteomics. I assessed the genetic/genomic structure and the degree of genetic variation among coral populations, and I have used proteomics and physiology to show the adaptive phenotypes in selected populations. One of my most significant accomplishments was pioneering a new coral shotgun proteomics protocol to effectively assess coral health, through a collaboration I established with Drs. Brook Nunn and Emma Timmins-Schiffman at the University of Washington. We have successfully identified over 3,000 coral proteins, which has led to the discovery of resilient corals that are adapted to their high-stress nearshore local environments, but potentially at the cost of genetic diversity.  </p>
-                <p> You can find more about this project and research results in my publications: <a href="https://peerj.com/articles/8550/" target="_blank"> Tisthammer et al. (2020) Genetic structure is stronger across human-impacted habitats than among islands in the coral <i>Porites lobata</i></a>  and  <a href="https://www.nature.com/articles/s41598-021-82569-7"> Tisthammer et al. (2021) Physiological and molecular responses of lobe coral indicate nearshore adaptations to anthropogenic stressors</a> </p>
+                <p> For my PhD dissertation and postdoctoral research at the Richmond Lab at the Kewalo Marine Laboratory of the University of Hawaii at Manoa, I investigated the adaptive ability of corals to changing environments, using genetics, genomics, and proteomics. I assessed the genetic/genomic structure and the degree of genetic variation among coral populations, and I have used proteomics and physiology to show the adaptive phenotypes in selected populations. My most significant accomplishment was pioneering a new coral shotgun proteomics protocol to effectively assess coral health through a collaboration with Drs. Brook Nunn and Emma Timmins-Schiffman at the University of Washington. We have successfully identified over 3,000 coral proteins, which has led to the discovery of resilient corals that have adapted to their high-stress nearshore local environments, but potentially at the cost of genetic diversity.  </p>
+                <p> You can find more details about this project and research results in my publications: <a href="https://peerj.com/articles/8550/" target="_blank"> Tisthammer et al. (2020) Genetic structure is stronger across human-impacted habitats than among islands in the coral <i>Porites lobata</i></a>  and  <a href="https://www.nature.com/articles/s41598-021-82569-7"> Tisthammer et al. (2021) Physiological and molecular responses of lobe coral indicate nearshore adaptations to anthropogenic stressors.</a> </p>
 
             </div>
       </div>
@@ -124,7 +124,7 @@
 
 <div class="section" id="research_projects">
   <div class="container">
-    <div class="h4 text-center mb-4 title">Research Project: Coral ecotoxicology</div>
+    <div class="h4 text-center mb-4 title">Research Project: Coral Ecotoxicology</div>
     <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
       <div class="card-body">
         <div class="row">
@@ -133,8 +133,8 @@
                 <p class="category"></p>
               </div>
               <div class="col-lg-8 col-md-8">
-                <p> Water pollution is a serious local threats to coral reefs in Hawaii. I have studied the effects of various land based chemical pollutants on corals, including herbicides (Atrazine and Roundup), PCBs, sunscreen (oxybenzone), and chlorine, mostly in collaboration with government agencies. The research on PCBs was funded by Hawaii Department of Health, exploring molecular biomarkers of pollutant/toxicant exposure to PCBs using proteomics, and herbicide studies were funded by the National Fish & Wildlife Foundation. We assessed sublethal physiological and molecular (proteomic) responses for adult corals, and settlement, metamorphosis, and fertilization success for larvae and gametes. </p>
-                <p> <a href="http://www.kewalo.hawaii.edu/index.php/2013-08-02-03-42-22/faculty/robert-h-richmond" target="_blank">The Richmond Lab</a> has been conducting a variety of ecotoxicological studies in corals. Most recently, the effects of broadificum (rat poison) on coral was assessed by Ph.D. studnet, Alex Barkman, the effects of tungsten metal (W) on corals by Ph.D. studnets, Keiko Wilkins and Madelief Shelvis, and the effects of sedimentation on corals by Ph.D. students Alexi Meltel & Alex Barkman.    </p>
+                <p> Water pollution is a serious local threat to coral reefs in Hawaii and the majority of U.S. reefs. I have studied the effects of various land based chemical pollutants on corals, including herbicides (Atrazine and Roundup), PCBs, sunscreen (oxybenzone), and chlorine, mostly in collaboration with government agencies. The research on PCBs was funded by the Hawaii Department of Health and explored molecular biomarkers of pollutant/toxicant exposure to PCBs using proteomics. Herbicide studies were funded by the National Fish & Wildlife Foundation, and we assessed sublethal physiological and molecular (proteomic) responses for adult corals, and settlement, metamorphosis, and fertilization success for larvae and gametes. </p>
+                <p> <a href="http://www.kewalo.hawaii.edu/index.php/2013-08-02-03-42-22/faculty/robert-h-richmond" target="_blank">The Richmond Lab</a> has been conducting a variety of ecotoxicological studies in corals. Most recently, the effects of broadificum (rat poison) on coral was assessed by PhD candidate Alex Barkman, the effects of tungsten metal (W) on corals by PhD students Keiko Wilkins & Madelief Shelvis, and the effects of sedimentation on corals by PhD students Alexi Meltel & Alex Barkman.    </p>
             </div>
       </div>
     </div>
@@ -143,7 +143,7 @@
 
 <div class="section" id="research_projects">
   <div class="container">
-    <div class="h4 text-center mb-4 title">Research Project: <i>In vivo</i> Viral evolution </div>
+    <div class="h4 text-center mb-4 title">Research Project: <i>In vivo</i> Viral Evolution </div>
     <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
       <div class="card-body">
         <div class="row">
@@ -152,7 +152,7 @@
                 <p class="category"></p>
               </div>
               <div class="col-lg-8 col-md-8">
-                <p> I have investigated the evolutionary genomics of disease viruses at the computational biology lab (CoDE Lab) of <a href=“https://pleunipennings.wordpress.com/" target="_blank">Dr. Pleuni Pennings</a> at San Francisco State University. My research projects at the CoDE Lab included estimating genome-wide fitness costs of in vivo mutations in Hepatitis C virus using clinical data (human) and understanding evolutionary dynamics of Simian immunodeficiency virus (SIV) in macaques under co-infection with tuberculosis (TB). I used custom scripts I have developed in R and Python along with command-line based programs to investigate viral evolution. I also have applied machine learning to predict mutation frequencies and fitness costs. Under Dr. Pennings, I have acquired not only coding skills and good data science practice, but also the passion for promoting coding in biology students (SFSU offeres students many opportunities to learn coding and I have participated as a mentor to several programs!). 
+                <p> I have investigated the evolutionary genomics of disease viruses at the computational biology lab (CoDE Lab) of <a href=“https://pleunipennings.wordpress.com/" target="_blank">Dr. Pleuni Pennings</a> at San Francisco State University (SFSU). My research at the CoDE Lab involved estimating genome-wide fitness costs of <i>in vivo</i> mutations in Hepatitis C virus using clinical data (human), as well as understanding the evolutionary dynamics of Simian immunodeficiency virus (SIV) in macaques under co-infection with tuberculosis. Using custom scripts I developed in R and Python, along with command-line based programs, I have investigated viral evolution and diversity. I have also applied machine learning to predict mutation frequencies and fitness costs. Under Dr. Pennings, I have acquired not only more proficient coding skills and better data science practices, but also the passion for promoting coding skills for biology students. I taught a Coding Community course for the Graduate Opportunities to Learn Data science (GOLD) program and I have participated as a mentor to several coding programs. 
 
                  </p>
             </div>
