--- a/publications.html
+++ b/publications.html
@@ -48,7 +48,7 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/ocean.jpg')"></div>
        <div class="container">
         <div class="content-center">
-          <div class="h2 title">Kaho Tisthammer PhD</div>
+          <div class="h2 title">Kaho Tisthammer, PhD</div>
            <p class="category text-white">Marine Biologist, Molecular Ecologist, Computational Biologist</p>
         </div>
        </div>
