updates to index.html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
        <div class="container">
         <div class="content-center">
          <div class="cc-profile-image"><a href="#"><img src="images/Kaho1.jpg" alt="Image"/></a></div>
-          <div class="h2 title">Kaho Tisthammer. PhD</div>
+          <div class="h2 title">Kaho Tisthammer, PhD</div>
            <p class="category text-white">Marine Biologist, Molecular Ecologist, Computational Biologist</p><a class="btn btn-primary" href="files/CV_KTisthammer.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
        </div>
